# mlops-uplimit-w2

./: .gitignore  .pre-commit-config.yaml  README.md
.github/actions/python-poetry-env/: action.yml
.github/workflows/: pr.yml
project/: pyproject.toml  setup_dashboard.sh  tox.ini
project/load_test/: average_test.py
project/scripts/: query_api.py  query_qpi.py
project/src/: constants.py  data_models.py  model.py  server.py
project/tests/: conftest.py
project/tests/behavioural_test/: test_model.py
project/tests/e2e_test/: test_api.py
ray_in_action/: ray_actors.ipynb  ray_tasks.ipynb
