[tool.poetry]
name = "MLOps Uplimit Drug Review Sentiment Classifier"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.31.3"
pytest = "^8.3.2"
ruff = "^0.6.2"
tox = "^4.18.0"
ray = { version = "^2.37.0", extras = ["serve"] }
numpy = "^2.1.0"
onnxruntime = "^1.19.0"
loguru = "^0.7.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
wandb = "^0.17.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=70"
